hphp/test/quick/trailing_comma_bad6.php.expectf

Fatal error: syntax error, unexpected ',', expecting ')' in %s on line 2
